USER-MGT-SERVICE: added swagger

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 Server:
-  port: 8081
+  port: 8082
 
 Spring:
   datasource:
@@ -48,6 +48,9 @@ app:
 
   name: firs-risk-management-web-portal
   no-reply-email: matealth@gmail.com
+
+  allow:
+    origin: "*"
 
 jasypt:
   encryptor:
