--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<guava.version>r05</guava.version>
 		<twilio.version>8.12.0</twilio.version>
 		<sendgrid.version>4.8.2</sendgrid.version>
-		<springdoc.version>1.6.6</springdoc.version>
+		<springdoc.version>2.1.0</springdoc.version>
 		<jasypt.version>3.0.5</jasypt.version>
 	</properties>
 
@@ -135,7 +135,13 @@
 		<!-- spring doc library -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
 
