--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: "matealth@hmail.com"
+      PGADMIN_DEFAULT_EMAIL: "matealth@gmail.com"
       PGADMIN_DEFAULT_PASSWORD: "admin!"
     ports:
       - "5050:80"
